# sample-static-rust-axum

./: .gitignore  README.md  skaffold.yaml
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml  Dockerfile  README.md
api/src/: main.rs
